src/objects/Deposition__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Email_Address__c</fullName>
        <label>Accounting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>After_Deposition_Date_With_CR_Email__c</fullName>
        <formula>IF(OR(ISBlank( Deposition_Date__c ),ISBlank( CR_Email_Address__c ) ),&apos;&apos;,TEXT(Deposition_Date__c +1)&amp;&apos;==Email==&apos;&amp;CR_Email_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>After Deposition Date With CR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Or_Boss_Email__c</fullName>
        <label>Assistant Or Boss Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attorney_Count__c</fullName>
        <label>Attorney Count</label>
        <summaryFilterItems>
            <field>Attendee__c.Role__c</field>
            <operation>equals</operation>
            <value>Attorney</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Deposition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BU_Invoicing__c</fullName>
        <label>BU - Invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Production__c</fullName>
        <label>BU - Production</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Scheduling__c</fullName>
        <label>BU- Scheduling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Video__c</fullName>
        <label>BU - Video</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_for_Last_Minute_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if we need to bill the client for a last-minute cancellation.</description>
        <label>Bill for Last Minute Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billed_Date__c</fullName>
        <label>Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Days_Until_Transcript_is_Due__c</fullName>
        <formula>IF(Deposition_Date__c  &gt;= TODAY(),NULL,
IF(TEXT(Deposition_Status__c) = &quot;Production Complete&quot; ,NULL,
IF(TEXT(Deposition_Status__c) = &quot;Cancelled&quot; ,NULL,
Due_Date_To_The_Client_Computed__c - TODAY()
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days Until Transcript is Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Email_Address__c</fullName>
        <label>CR Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_Time__c</fullName>
        <label>Cancelled Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Billing_Notes__c</fullName>
        <label>Case Billing Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Details__c</fullName>
        <formula>Deposition_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Depositions associated with a particular case lead</description>
        <label>Case Lead</label>
        <referenceTo>Case_Leads__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Name_Text__c</fullName>
        <label>Case Name Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name/Caption</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Production_Notes__c</fullName>
        <label>Case Production Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Reporter_Instructions__c</fullName>
        <label>Case - Reporter Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Video_Notes__c</fullName>
        <label>Case Video Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Log__c</fullName>
        <description>Captures the fields changed during updates, is not shown on the UI, used in Email templates</description>
        <inlineHelpText>Captures the fields changed during updates, is not shown on the UI, used in Email templates</inlineHelpText>
        <label>Change Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claims_Professional__c</fullName>
        <label>Claims Professional</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Notes__c</fullName>
        <label>Client Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Client__c</fullName>
        <label>Confirm - Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Interpreter__c</fullName>
        <label>Confirm - Interpreter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Reporter__c</fullName>
        <label>Confirm - Reporter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Video_Tech__c</fullName>
        <label>Confirm - Video Tech</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm__c</fullName>
        <formula>IF(AND(TEXT(Deposition_Status__c) != &apos;Confirmed&apos;,TEXT(Deposition_Status__c) != &apos;Cancelled&apos;), HYPERLINK(&apos;http://nextgen.force.com/ConfirmDeposition?id=&apos;+ Name+&apos;&amp;code=&apos;+Id+&apos;&amp;type=C&apos;, &apos;Confirm&apos;) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Time__c</fullName>
        <label>My Local Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Corporate_Client_Source__c</fullName>
        <label>Corporate Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AIG</fullName>
                </value>
                <value>
                    <fullName>Allstate</fullName>
                </value>
                <value>
                    <fullName>Amica</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T (Troy)</fullName>
                </value>
                <value>
                    <fullName>BASF</fullName>
                </value>
                <value>
                    <fullName>Cardinal Health</fullName>
                </value>
                <value>
                    <fullName>CSAA Insurance</fullName>
                </value>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>Electric Insurance Co.</fullName>
                </value>
                <value>
                    <fullName>Erie Insurance</fullName>
                </value>
                <value>
                    <fullName>Farmers Insurance</fullName>
                </value>
                <value>
                    <fullName>Fireman’s Fund</fullName>
                </value>
                <value>
                    <fullName>Gateway Risk Services</fullName>
                </value>
                <value>
                    <fullName>GEICO</fullName>
                </value>
                <value>
                    <fullName>Global Indemnity</fullName>
                </value>
                <value>
                    <fullName>Horace Mann</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Liberty Mutual</fullName>
                </value>
                <value>
                    <fullName>Markel</fullName>
                </value>
                <value>
                    <fullName>Mass Mutual</fullName>
                </value>
                <value>
                    <fullName>Medical Protective</fullName>
                </value>
                <value>
                    <fullName>Mercury Insurance</fullName>
                </value>
                <value>
                    <fullName>National Indemnity Company of the South</fullName>
                </value>
                <value>
                    <fullName>National Liability &amp; Fire Insurance Co.</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>No Corporate Client</fullName>
                </value>
                <value>
                    <fullName>North American Risk Services</fullName>
                </value>
                <value>
                    <fullName>Old Republic Contractors</fullName>
                </value>
                <value>
                    <fullName>Pioneer</fullName>
                </value>
                <value>
                    <fullName>Preferred Mutual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active_Corporate_Client__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Depositions (Corporate Client)</relationshipLabel>
        <relationshipName>Depositions_Corporate_Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Reporter_Count__c</fullName>
        <description>Includes the count of Court Reporter for a Deposition</description>
        <inlineHelpText>Includes the count of Court Reporter for a Deposition</inlineHelpText>
        <label>Court Reporter Count</label>
        <summaryFilterItems>
            <field>Attendee__c.Role__c</field>
            <operation>equals</operation>
            <value>Court Reporter</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.Deposition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Day_Of_The_Week_Transcript_Due__c</fullName>
        <formula>CASE(MOD(Due_Date_To_The_Client_Computed__c - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of The Week Transcript Due to Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Of_The_Week__c</fullName>
        <formula>CASE(MOD( Deposition_Date__c - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2, &quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6, &quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of The Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Deposition__c</fullName>
        <formula>TODAY() - Deposition_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Deposition</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Transcript_Due_Comput__c</fullName>
        <formula>IF(ISPICKVAL(Deposition_Status__c, &quot;In Production&quot;), 

CASE(MOD( Deposition_Date__c - DATE(1985,6,24),7), 

0 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Due_Date_To_The_Client_Computed__c- Deposition_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Due_Date_To_The_Client_Computed__c- Deposition_Date__c)/7)*5)
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Transcript Due - Not used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Transcript_Due_Computed__c</fullName>
        <inlineHelpText>Business days</inlineHelpText>
        <label>Days Until Transcript Due(Computed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Transcript_Due_Date__c</fullName>
        <description>The old formula was /*Due_date__c - TODAY() - 2*/  Now using the new field</description>
        <formula>/*OLD FORMULA*/
/*Due_date__c - TODAY() - 2*/ 
Due_Date_To_The_Client_Computed__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Transcript Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Depo_Cancel_Date_Diff__c</fullName>
        <formula>Deposition_Date__c - Cancelled_Date__c</formula>
        <label>Depo &amp; Cancel Date Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deponent_Name__c</fullName>
        <label>Deponent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Date_Plus_30__c</fullName>
        <formula>Deposition_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Date Plus 30 Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Date_With_CR_Email__c</fullName>
        <formula>IF(OR(ISBlank( Deposition_Date__c ),ISBlank(  CR_Email_Address__c ) ),&apos;&apos;,TEXT(Deposition_Date__c )&amp;&apos;==Email==&apos;&amp;CR_Email_Address__c)</formula>
        <label>Deposition Date With CR Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Date__c</fullName>
        <label>Deposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposition_Group_Id__c</fullName>
        <formula>IF(ISBLANK( Deposition_Group__c ),&apos;&apos;,Deposition_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposition Group Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposition_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition Group</label>
        <referenceTo>Case__c</referenceTo>
        <relationshipLabel>Depositions</relationshipLabel>
        <relationshipName>Depositions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposition_Location__c</fullName>
        <label>Deposition Location</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Deposition_Room_Unique__c</fullName>
        <label>Deposition Room Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deposition_Services__c</fullName>
        <label>Deposition Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court Reporter</fullName>
                    <default>true</default>
                    <label>Court Reporter</label>
                </value>
                <value>
                    <fullName>Expedite</fullName>
                </value>
                <value>
                    <fullName>LegalView (Remote Video)</fullName>
                </value>
                <value>
                    <fullName>Traditional Video</fullName>
                </value>
                <value>
                    <fullName>Realtime - Local</fullName>
                </value>
                <value>
                    <fullName>Realtime - Internet</fullName>
                </value>
                <value>
                    <fullName>Realtime - Possible</fullName>
                </value>
                <value>
                    <fullName>Rough Draft</fullName>
                </value>
                <value>
                    <fullName>Rough Draft - Possible</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Synchronized Video</fullName>
                </value>
                <value>
                    <fullName>Process Serving</fullName>
                </value>
                <value>
                    <fullName>Conference Room</fullName>
                </value>
                <value>
                    <fullName>Post Production</fullName>
                </value>
                <value>
                    <fullName>Advanced Video Services</fullName>
                </value>
                <value>
                    <fullName>Teleconference</fullName>
                </value>
                <value>
                    <fullName>Technical/medical/video/expert/interpreter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposition_Status__c</fullName>
        <label>Deposition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>In Production - Partially Complete</fullName>
                </value>
                <value>
                    <fullName>Production Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Transcript on Hold – Sent to Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposition_Time_Calculated__c</fullName>
        <label>Deposition Time Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deposition_Time__c</fullName>
        <label>Deposition Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Case Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Different_Reporters_on_Adjacent_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Different Reporters on Adjacent Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_To_The_Client_Computed__c</fullName>
        <description>Due Date to the Client in Business Days computed automatically via Trigger</description>
        <label>Due Date To The Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(Stop_Time__c -  Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <label>Email Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ends_Time__c</fullName>
        <label>Ends Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Errata_Due_Date__c</fullName>
        <formula>IF(ISPICKVAL(Errata_Status__c, &quot;Waiting&quot;), Production_Complete_Date__c + 30,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Errata Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Errata_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Errata Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Errata_Notes__c</fullName>
        <label>Errata Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Errata_Status__c</fullName>
        <label>Errata Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                    <default>true</default>
                    <label>Not Needed</label>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Duration__c</fullName>
        <description>How long does the client expect this event to last?</description>
        <label>Estimated Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type_Lowercase__c</fullName>
        <formula>CASE( Event_Type__c , &quot;Deposition&quot;, &quot;deposition&quot;, &quot;Arbitration&quot;, &quot;arbitration&quot;, &quot;Demo&quot;, &quot;demo&quot;, &quot;Other&quot; , &quot;event&quot; , &quot;Examination Under Oath&quot; , &quot;examination under oath&quot;, &quot;Statement Under Oath&quot; , &quot;statement under oath&quot;, &quot;Mediation&quot; , &quot;mediation&quot;, &quot;Trial&quot; , &quot;trial&quot;, &quot;Hearing&quot; , &quot;hearing&quot;, &quot;Video Playback&quot; , &quot;video playback&quot;, &quot;Auction&quot; , &quot;auction&quot;, &quot;event&quot;)</formula>
        <label>Event Type Lowercase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Deposition</fullName>
                    <default>true</default>
                    <label>Deposition</label>
                </value>
                <value>
                    <fullName>Examination Under Oath</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Mediation</fullName>
                </value>
                <value>
                    <fullName>Statement Under Oath</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Video Playback</fullName>
                </value>
                <value>
                    <fullName>Client Meeting</fullName>
                </value>
                <value>
                    <fullName>Captioned Meeting</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Intra-co</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_Page_Count__c</fullName>
        <label>Exhibit Page Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibit_Status__c</fullName>
        <label>Exhibit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                    <default>true</default>
                    <label>-</label>
                </value>
                <value>
                    <fullName>No exhibits</fullName>
                </value>
                <value>
                    <fullName>Not received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Scanned_Exhibits_Received_Waiting_for_Hard_Copy</fullName>
                    <label>Scanned Exhibits Received - Waiting for Hard Copy</label>
                </value>
                <value>
                    <fullName>Scanned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <label>Expedite Level (Business Days)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Same day turnaround</fullName>
                </value>
                <value>
                    <fullName>Next day turnaround</fullName>
                </value>
                <value>
                    <fullName>2 day turnaround</fullName>
                </value>
                <value>
                    <fullName>3 day turnaround</fullName>
                </value>
                <value>
                    <fullName>4 day turnaround</fullName>
                </value>
                <value>
                    <fullName>5 day turnaround</fullName>
                </value>
                <value>
                    <fullName>6 day turnaround</fullName>
                </value>
                <value>
                    <fullName>7 day turnaround</fullName>
                </value>
                <value>
                    <fullName>8 day turnaround</fullName>
                </value>
                <value>
                    <fullName>9 day turnaround</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Notification_Message__c</fullName>
        <label>File Notification Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Uploaded_By_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>File Uploaded By Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>Primary_Court_Reporting_Firm__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Change_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, the trigger runs and computes the values that are changed, enable selectively for testing and debugging first.</description>
        <inlineHelpText>When this field is checked, the trigger runs and computes the values that are changed, enable selectively</inlineHelpText>
        <label>Generate Change Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Id__c</fullName>
        <label>Google Drive Folder Id</label>
        <length>35</length>
        <type>Text</type>
    </fields>
</CustomObject>